# django-healthy

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  ruff_defaults.toml  taplo.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  tests.yml
django_healthy/: _compat.py  models.py
django_healthy/health_checks/: __init__.py  base.py  cache.py  db.py  handler.py  service.py  storage.py  types.py
django_healthy/locale/en/LC_MESSAGES/: django.po
django_healthy/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
django_healthy/migrations/: 0001_initial.py
django_healthy/templates/django_healthy/: report.html
src/django_healthy/: _compat.py  apps.py  urls.py  views.py
src/django_healthy/health_checks/: __init__.py  base.py  cache.py  storage.py  types.py
src/django_healthy/locale/en/LC_MESSAGES/: django.mo
src/django_healthy/templates/django_healthy/: report.html
testproj/: settings.py  urls.py
tests/: test_views.py
tests/health_checks/: test_base.py  test_cache.py  test_db.py  test_handler.py  test_service.py  test_storage.py
